# mentor-plugin

./: .mcp.json  CATEGORISATION_IMPLEMENTATION.md  DEVELOPER.md  INSTALLATION.md  README.md  RELEASE_STRATEGY.md  TEACHING.md  TODO.md  VISION.md  install.sh  marketplace.json  mcp-server.sh  opencode.json  todo.md
knowledge/dashboard/: Cargo.toml
knowledge/dashboard/src/: categories.rs  config.rs  content.rs  dates.rs  header.rs  logger.rs  logs.rs  main.rs  message.rs  sessions.rs  state.rs  topics.rs  topics_view.rs
knowledge/learning/: Cargo.toml
knowledge/learning/src/: category.rs  lib.rs  session.rs  session_storage.rs  sm2.rs  sqlite_learning_storage.rs  storage_error.rs  topic.rs  topic_storage.rs  trigram_similarity.rs
knowledge/learning/src/file_storage/: mod.rs
knowledge/learning/src/libsql/: libsql_session_storage.rs  libsql_storage.rs  libsql_topic_storage.rs  mod.rs
knowledge/learning/src/sql/: mod.rs  sql_session_storage.rs  sql_storage.rs  sql_topic_storage.rs
knowledge/learning/src/sql/migrations/: mod.rs  (+2 more)
knowledge/learning/src/sqlite/: mod.rs  sqlite_session_storage.rs  sqlite_storage.rs  sqlite_topic_storage.rs
knowledge/mcp/: Cargo.toml
knowledge/mcp/src/: create_session.rs  get_all_sessions.rs  get_all_topics.rs  get_topics.rs  list_all_topics.rs  main.rs  review_topic.rs  set_topic_categories.rs  tool_service.rs  topic_candidates.rs  topic_depth.rs  update_session.rs  update_topic_categories.rs
knowledge/mcp/tests/: e2e.rs
mcp/sm2/: Cargo.toml
mcp/sm2/src/: main.rs  sqlite_topic_storage.rs  tool_service.rs  topic.rs
mcp/sm2/src/tools/: deserialisers.rs  mod.rs  review_topic.rs  tool_service.rs  topic_candidates.rs  topic_depth.rs  topics.rs
mcp/sm2/tests/: e2e.rs
(+41 files in other folders)
