[package]
name = "dashboard"
edition = "2024"
version.workspace = true

[dependencies]
learning = { path = "../learning" }
ratatui = "0.30.0"
color-eyre = "0.6.3"
crossterm = "0.29.0"
chrono = "0.4.44"
tokio = { version = "1", features = ["rt-multi-thread"] }
toml = "1.1.2"
serde = {version = "1.0.228"}

[[bin]]
name = "mentor-dashboard"
path = "src/main.rs"
