[package]
name = "learning"
version.workspace = true
edition = "2024"

[dependencies]
libsql = {version = "0.9.30"}
eyre = {version = "0.6.12"}
serde = {version = "1.0.228", features=["derive"]}
uuid = {version = "1.23.0", features=["v4"]}
async-trait = {version = "0.1"}
toml = "1.1.2"

[dev-dependencies]
tokio = {version = "1", features = ["full"]}
