[package]
name = "mcp"
version.workspace = true
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
rmcp = { version = "1.2.0", features = ["server"] }
serde = {version = "1.0.228"}
uuid = {version = "1.23.0", features=["v4", "serde"]}
learning = { path = "../learning" }

[dev-dependencies]
rmcp = { version = "1.2.0", features = ["client", "transport-child-process"]}
tempfile = {version = "3.27.0"}
