[package]
name = "sm2"
version = "0.0.18"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
rmcp = { version = "1.2.0", features = ["server"] }
serde = {version = "1.0.228"}
rusqlite = {version = "0.39.0"}

[dev-dependencies]
rmcp = { version = "1.2.0", features = ["client", "transport-child-process"]}
tempfile = {version = "3.27.0"}
